crates/runtime/tests/snapshots/object_load_index__unknown.snap
---
source: crates/runtime/tests/object_load_index.rs
expression: snapshot
---
# Input:
v := {}
print v["a"]


# Result (error):
In test_func at 0..0
Error: cannot get field `"a"` on value `{}`


# Stdout:

